# clean-arch-rust

./: .env  Cargo.toml  README.md  diesel.toml  docker-compose.yml
migrations/2024-09-01-184555_create_user/: up.sql
src/: main.rs
src/application/use_cases/: get_user.rs  register_user.rs
src/domain/entities/: user.rs
src/domain/repositories/: user_repository.rs
src/domain/services/: user_service.rs
src/infrastructure/: mod.rs  schema.rs  web.rs
src/infrastructure/database/: connection.rs
src/infrastructure/repositories/: mod.rs  pg_user_repository.rs
src/presentation/handlers/: user_handler.rs
src/presentation/routes/: user_routes.rs
