[package]
name = "clean-arch-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.209", features = ["derive"] }
async-trait = "0.1.81"
diesel = { version = "2.2.3", features = ["postgres", "r2d2", "uuid"] }
dotenv = "0.15.0"
r2d2 = "0.8.10"
actix-web = "4.9.0"
log = "0.4.22"
env_logger = "0.11.5"
uuid = { version = "1.10.0", features = ["serde"] }
